--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,33 @@
 
     <!-- Example of another short blog -->
 
+    <!-- Second Blog -->
+<details>
+  <summary>Science Mental Models for Life and Decisions (Reading time: ~6 minutes)</summary>
+  <div class="blog-content">
+    <p>Charlie Munger said we need a latticework of mental models. The beauty of science is that it gives us patterns that don’t just stay in textbooks. They spill over into daily life, career, and relationships. Here are a few science-based models you can lean on in real decision making.</p>
+
+    <h4>1. Entropy</h4>
+    <p>Left on its own, everything drifts toward disorder. Your room, your body, your projects—they don’t maintain themselves. Entropy is why maintenance is not optional. If you don’t actively put in energy, decay takes over. This explains why gym habits slip, codebases rot, and relationships fade. The lesson is simple: if something matters, schedule the upkeep. Don’t wait for collapse to remind you that order isn’t free.</p>
+
+    <h4>2. Critical Mass</h4>
+    <p>Big shifts often feel sudden, but they’re the result of small pushes stacking up. A nuclear reaction doesn’t happen until enough fuel is gathered, and then it looks like magic. Building an audience, forming a habit, or launching a product works the same way. At first you see nothing, then suddenly you see everything. Most people quit before hitting that invisible threshold. Keep going, your critical mass might be closer than you think.</p>
+
+    <h4>3. Feedback Loops</h4>
+    <p>Biology runs on feedback. Some loops stabilize you, like how your body regulates temperature, while others amplify until they spiral out of control. Life is no different. Social media outrage is a runaway loop. A nightly journaling routine can be a stabilizing one. Recognizing which loops you’re in is half the game. If a loop keeps dragging you in the wrong direction, cut it early. If it’s healthy, reinforce it until it becomes automatic.</p>
+
+    <h4>4. Limiting Factor</h4>
+    <p>In chemistry, reactions stop not because of abundance but because one ingredient runs out. That’s the limiting reagent. In real life, growth is also constrained by the rarest input. A business might have funding but no skilled engineers. A student might have motivation but no clear study plan. Instead of trying to optimize everything, find your bottleneck. Fix that first, because until you do, nothing else moves forward.</p>
+
+    <h4>5. Inertia</h4>
+    <p>Physics teaches that objects at rest stay at rest, and objects in motion keep going. Humans aren’t much different. Starting a project is often harder than doing the project. But once you’re in motion, momentum carries you. That’s why the hardest part of going to the gym is putting on your shoes. Lower the barrier to starting and you’ll beat inertia. The trick isn’t willpower, it’s designing tiny starts that make momentum inevitable.</p>
+
+    <h4>6. Natural Selection</h4>
+    <p>Biology reminds us that only what works survives. Nature discards the inefficient, and so does the world. Careers, businesses, and even personal habits face the same filter. The ideas that adapt stick around, the rest fade. Instead of resisting change, evolve with it. Test small variations, keep what works, and let the rest die quietly. Survival, whether in ecosystems or economies, belongs to those who can learn and adjust fastest.</p>
+  </div>
+</details>
+
+
   </main>
 </body>
 </html>
