--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
 
     <!-- Second Blog -->
 <details>
-  <summary>Science Mental Models for Life and Decisions (Reading time: ~6 minutes)</summary>
+  <summary>Science Mental Models for Life & Decisions- Reading time: ~6 minutes</summary>
   <div class="blog-content">
     <p>Charlie Munger said we need a latticework of mental models. The beauty of science is that it gives us patterns that don’t just stay in textbooks. They spill over into daily life, career, and relationships. Here are a few science-based models you can lean on in real decision making.</p>
 
