--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
         My life is guided by a single core value inspired by the Buddha’s wisdom:  
         <em>“What we think, we become.”</em>
       </p>
+
+         <p>I define these 5 core values for my life:</p>
+    <p>
+        <strong>1. Ethics is Fundamental</strong><br>
+        Ethics is Fundamental, which means integrity is non-negotiable in how you live and work. This is lived out through the principle to Respect Everything Equally, treating people, work, and nature with the same level of respect.
+    </p>
+    <p>
+        <strong>2. Be Present</strong><br>
+        Be Present by focusing on one thing at a time and giving it your full attention. This practice allows you to Respect Time, treating every moment as valuable and avoiding wasting it. It also means you will Take Small Tasks Seriously, handling small things with care so that big things will fall into place.
+    </p>
+    <p>
+        <strong>3. Love and Respect Yourself</strong><br>
+        Love and Respect Yourself, as self-care and self-respect are the foundation of everything else. This means you Do Not Complain but instead accept what comes your way and act on it. It is the source of the drive to Stay Humble and Hungry, always seeking more knowledge while remaining grounded.
+    </p>
+    <p>
+        <strong>4. Contribute Proactively</strong><br>
+        Adopt a mindset to Contribute Proactively, always asking "What Can I Give?" This means you Choose to Create, Not Just Consume, and you commit to Never Stop Learning. It requires you to remember that The Universe Rewards Bold Action and to Take a Simple Idea Seriously with deep focus.
+    </p>
+    <p>
+        <strong>5. Courage, Discipline, and Consistency</strong><br>
+        This pillar is built on Courage and Discipline: the courage to begin and the discipline to continue. It is understanding the Law of Accumulation—that small actions build your future—and that Consistency Compounds through your daily routines. Guide your efforts by the idea to Dream of Doing, Not Just Becoming, and remember that Done is Better than Perfect and Progress Beats Planning.
+    </p>
+       
       <p>
         This website is part of my <strong>100-day challenge</strong> — a small experiment where I aim to get <em>1% better every day</em>.  
         Here, I share my personal experiences, thoughts, and learnings.  
