--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <em>“What we think, we become.”</em>
       </p>
 
-         <p>I define these 5 core values for my life:</p>
+         <p>Building upon this wisdom, I have defined five core values that guide my actions and decisions of my life:</p>
     <p>
         <strong>1. Ethics is Fundamental</strong><br>
         Ethics is Fundamental, which means integrity is non-negotiable in how you live and work. This is lived out through the principle to Respect Everything Equally, treating people, work, and nature with the same level of respect.
