--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
       </p>
 
          <p>Building upon this wisdom, I have defined five core values that guide my actions and decisions of my life:</p>
-    <p>
-        <strong>1. Ethics is Fundamental</strong><br>
-        Ethics is Fundamental, which means integrity is non-negotiable in how you live and work. This is lived out through the principle to Respect Everything Equally, treating people, work, and nature with the same level of respect.
-    </p>
-    <p>
-        <strong>2. Be Present</strong><br>
-        Be Present by focusing on one thing at a time and giving it your full attention. This practice allows you to Respect Time, treating every moment as valuable and avoiding wasting it. It also means you will Take Small Tasks Seriously, handling small things with care so that big things will fall into place.
-    </p>
-    <p>
-        <strong>3. Love and Respect Yourself</strong><br>
-        Love and Respect Yourself, as self-care and self-respect are the foundation of everything else. This means you Do Not Complain but instead accept what comes your way and act on it. It is the source of the drive to Stay Humble and Hungry, always seeking more knowledge while remaining grounded.
-    </p>
-    <p>
-        <strong>4. Contribute Proactively</strong><br>
-        Adopt a mindset to Contribute Proactively, always asking "What Can I Give?" This means you Choose to Create, Not Just Consume, and you commit to Never Stop Learning. It requires you to remember that The Universe Rewards Bold Action and to Take a Simple Idea Seriously with deep focus.
-    </p>
-    <p>
-        <strong>5. Courage, Discipline, and Consistency</strong><br>
-        This pillar is built on Courage and Discipline: the courage to begin and the discipline to continue. It is understanding the Law of Accumulation—that small actions build your future—and that Consistency Compounds through your daily routines. Guide your efforts by the idea to Dream of Doing, Not Just Becoming, and remember that Done is Better than Perfect and Progress Beats Planning.
-    </p>
+   <p>
+    <strong>1. Ethics is Fundamental</strong><br>
+    Integrity is non-negotiable in how we live and work. This is practiced by respecting everything equally - treating people, work, and nature with the same level of respect.
+</p>
+<p>
+    <strong>2. Be Present</strong><br>
+    This means focusing on one thing at a time and giving it full attention. This practice helps value each moment and avoid wasting time. It involves taking small tasks seriously, understanding that handling things with care leads to bigger accomplishments.
+</p>
+<p>
+    <strong>3. Love and Respect Yourself</strong><br>
+    Self-care and self-respect form the foundation for everything else. This involves avoiding complaints and instead accepting circumstances and taking action. It means staying both humble and hungry for knowledge while remaining grounded.
+</p>
+<p>
+    <strong>4. Contribute Proactively</strong><br>
+    This mindset focuses on asking what can be given rather than what can be received. It means creating value rather than just consuming, and committing to continuous learning. It requires taking bold action and pursuing simple ideas with deep focus.
+</p>
+<p>
+    <strong>5. Courage, Discipline, and Consistency</strong><br>
+    This approach begins with the courage to start and the discipline to continue. It recognizes that small daily actions accumulate into significant results over time. The focus remains on the process rather than the outcome, understanding that action and progress matter more than perfect planning.
+</p>
        
       <p>
         This website is part of my <strong>100-day challenge</strong> — a small experiment where I aim to get <em>1% better every day</em>.  
