--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,27 @@
   </div>
 </details>
 
+ <!-- Third Blog -->
+<details>
+  <summary>Science Mental Models for Life & Decisions- Reading time: ~6 minutes</summary>
+  <div class="blog-content">
+    <p>Are Humans Getting Stupider?</p>
+
+    <p></p>
+We live in an age where information is infinite, intelligence is automated, and machines can answer questions in seconds. By all logic, we should be smarter than ever. Instead, many have traded deep thinking for endless scrolling, consuming reels, memes, and bite-sized outrage, outsourcing judgment to algorithms and AI. The result: a public less curious, less informed, and more vulnerable to emotional manipulation.
+
+That vulnerability shows up at the ballot box. In the United States, voters elevated Donald Trump - a leader whose term was defined by erratic decisions, bizarre proposals like buying Greenland or merging Canada, and a focus on personal gain over public service. In Russia, Vladimir Putin has ruled for decades, waging war in Ukraine while tightening his grip on power. In China, Xi Jinping dismantled term limits, silenced critics, and expanded mass surveillance, even as the economy falters.
+
+Around the world, the pattern repeats. Hungary’s Viktor Orbán erodes democracy; Turkey’s Recep Tayyip Erdoğan blames interest rates for inflation, wrecking the currency. The UK briefly installed a prime minister whose economic plan imploded in 49 days. Italy can’t hold on to leaders long enough to ensure stability.
+
+Corruption and dysfunction fuel global unrest from Mongolia’s youth-led protests to Japan’s political scandals, Brazil’s graft cases, and France’s paralyzing strikes.
+
+This isn’t just about bad politicians. It’s about a distracted, dopamine-chasing society that no longer demands competence. When people stop questioning, stop learning, and let algorithms do their thinking, they become easy prey for strongmen, populists, and con artists.
+
+We’re not just electing worse leaders, we’re creating the conditions for them to thrive. In the age of AI, the real danger isn’t that machines will outsmart us. It’s that we’ll stop trying to be smart at all.
+    
+  </div>
+</details>
 
   </main>
 </body>
