--- a/blog.html
+++ b/blog.html
@@ -84,9 +84,9 @@
 
  <!-- Third Blog -->
 <details>
-  <summary>Science Mental Models for Life & Decisions- Reading time: ~6 minutes</summary>
+  <summary>Are Humans Getting Stupider?</summary>
   <div class="blog-content">
-    <p>Are Humans Getting Stupider?</p>
+    <h4>The Global Circus: Are We Being Governed by Fools?</h4>
 
     <p></p>
 We live in an age where information is infinite, intelligence is automated, and machines can answer questions in seconds. By all logic, we should be smarter than ever. Instead, many have traded deep thinking for endless scrolling, consuming reels, memes, and bite-sized outrage, outsourcing judgment to algorithms and AI. The result: a public less curious, less informed, and more vulnerable to emotional manipulation.
