--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
   <summary>Are Humans Getting Stupider?</summary>
   <div class="blog-content">
     <h4>The Global Circus: Are We Being Governed by Fools?</h4>
-
+    <p>How can we truly measure whether humanity is progressing in wisdom or regressing? While IQ scores might fluctuate and access to information is at an all-time high, one of the most revealing metrics may be the leaders we choose and the environments they create.</p>
     <p>We live in an age where information is infinite, intelligence is automated, and machines can answer questions in seconds. By all logic, we should be smarter than ever. Instead, many have traded deep thinking for endless scrolling, consuming reels, memes, and bite-sized outrage, outsourcing judgment to algorithms and AI. The result: a public less curious, less informed, and more vulnerable to emotional manipulation.
 That vulnerability shows up at the ballot box.</p>
     
