--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     <h2>Blog</h2>
 
     <!-- First Blog -->
-    <details>
+    <details class="blog-box">
       <summary>Math Mental Models for Life & Decisions — Reading time: ~5 minutes</summary>
       <div class="blog-content">
         <p>If you’ve ever heard Charlie Munger talk about decision-making, you’ll know he insists on building a “latticework of mental models.” One of the richest sources of these models is math—not the abstract equations you struggled with in school, but the patterns of growth, risk, and reality checks that quietly shape everything in daily life. In this post, we’ll look at a handful of math models you can actually use—and how they show up in real-world choices.</p>
@@ -57,7 +57,7 @@
     <!-- Example of another short blog -->
 
     <!-- Second Blog -->
-<details>
+<details class="blog-box">
   <summary>Science Mental Models for Life & Decisions- Reading time: ~6 minutes</summary>
   <div class="blog-content">
     <p>Charlie Munger said we need a latticework of mental models. The beauty of science is that it gives us patterns that don’t just stay in textbooks. They spill over into daily life, career, and relationships. Here are a few science-based models you can lean on in real decision making.</p>
@@ -83,7 +83,7 @@
 </details>
 
  <!-- Third Blog -->
-<details>
+<details class="blog-box">
   <summary>Are Humans Getting Stupider?</summary>
   <div class="blog-content">
     <h4>The Global Circus: Are We Being Governed by Fools?</h4>
