--- a/workout.html
+++ b/workout.html
@@ -44,19 +44,22 @@
   <h4>Workout Overview (7 Exercises — follow the order)</h4>
 
   <!-- Exercise 1 -->
-  <details>
+  <details class="exercise-box">
     <summary><b>Incline Dumbbell Press</b> — Upper chest, front delts, triceps</summary>
+     <div class="exercise-content">
     <p><b>How to:</b> Set bench 25–35°. Sit, dumbbells on knees, lie back, brace, press up slightly inward, lower under control to chest level.</p>
     <p><b>Cues:</b> Chest down, elbows ~45°, drive through palms.</p>
     <p><b>Common mistakes:</b> Bench too steep, flared elbows, bouncing off chest.</p>
     <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
     <p><b>Progression:</b> Add weight/reps, pause at bottom, slower lowering.</p>
     <img src="https://cdn.shopify.com/s/files/1/1497/9682/files/2_2ede191f-4aa5-4b2e-81e7-e16850e948a4.jpg?v=1648826784" alt="Incline press example 1">
+  </div>
   </details>
 
   <!-- Exercise 2 -->
-  <details>
+  <details class="exercise-box">
     <summary><b>Flat Dumbbell Fly</b> — Chest isolation</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Lie flat, arms overhead, slight elbow bend. Open wide until stretch in chest, then squeeze back together.</p>
     <p><b>Cues:</b> Lead with chest, not elbows.</p>
     <p><b>Common mistakes:</b> Straight elbows, too heavy weights, shoulder strain.</p>
@@ -64,6 +67,7 @@
     <p><b>Progression:</b> Slower lowering, longer stretch, superset with presses.</p>
     <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
     <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
+   </div>
   </details>
 
   <!-- Exercise 3 -->
