--- a/workout.html
+++ b/workout.html
@@ -38,8 +38,7 @@
   <h3>Push Day (Chest, Shoulders, Triceps)</h3>
 
   <p><b>Purpose:</b> Focus on push muscles — chest, shoulders, triceps — with a mix of compound and isolation moves for strength, size, and quality movement.</p>
-  <p><b>Why a 3-part split?</b> Better recovery, faster progress, and clearer programming.</p>
-  <p><b>Warm-up (non-negotiable):</b> 5–10 min cardio + shoulder/pec activations (band pull-aparts, Y/T raises, 2 light sets of first exercise).</p>
+  <p><b>Warm-up:</b> 5–10 min cardio + shoulder/pec activations (band pull-aparts, Y/T raises, 2 light sets of first exercise).</p>
 
   <h4>Workout Overview (7 Exercises — follow the order)</h4>
 
@@ -71,8 +70,10 @@
   </details>
 
   <!-- Exercise 3 -->
-  <details>
+  
+  <details class="exercise-box">
     <summary><b>Weighted Dips</b> — Chest & triceps</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Use dip bars. Lean forward for chest, upright for triceps. Lower until arms ~parallel, push back up.</p>
     <p><b>Cues:</b> Chest forward, scapula stable.</p>
     <p><b>Mistakes:</b> Too deep, kipping, wrist flare.</p>
@@ -80,11 +81,14 @@
     <p><b>Progression:</b> Add weight, slow lowering.</p>
     <img src="images/dips1.jpg" alt="Weighted dips example 1">
     <img src="images/dips2.jpg" alt="Weighted dips example 2">
+    </div>
   </details>
 
   <!-- Exercise 4 -->
-  <details>
+  
+  <details class="exercise-box">
     <summary><b>Seated Dumbbell Shoulder Press</b> — Shoulders, triceps</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Sit upright, press dumbbells overhead without arching lower back.</p>
     <p><b>Cues:</b> Ribcage down, head forward as weights pass.</p>
     <p><b>Mistakes:</b> Excessive arch, too wide grip, momentum use.</p>
@@ -92,11 +96,14 @@
     <p><b>Progression:</b> Add load, single-arm sets, pause reps.</p>
     <img src="images/shoulder-press1.jpg" alt="Shoulder press example 1">
     <img src="images/shoulder-press2.jpg" alt="Shoulder press example 2">
+    </div>
   </details>
 
   <!-- Exercise 5 -->
-  <details>
+
+  <details class="exercise-box">
     <summary><b>Dumbbell Lateral Raises</b> — Lateral delts</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Raise dumbbells to shoulder height, elbows slightly bent, controlled motion.</p>
     <p><b>Cues:</b> Lead with elbows, not hands.</p>
     <p><b>Mistakes:</b> Swinging torso, lifting too high.</p>
@@ -104,11 +111,14 @@
     <p><b>Progression:</b> Tempo control, drop-sets.</p>
     <img src="images/lateral-raise1.jpg" alt="Lateral raises example 1">
     <img src="images/lateral-raise2.jpg" alt="Lateral raises example 2">
+    </div>
   </details>
 
   <!-- Exercise 6 -->
-  <details>
+
+  <details class="exercise-box">
     <summary><b>Overhead Triceps Extension</b> — Triceps long head</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Hold dumbbell overhead, lower behind head, extend fully.</p>
     <p><b>Cues:</b> Elbow close, full stretch & contraction.</p>
     <p><b>Mistakes:</b> Elbow flaring, using momentum.</p>
@@ -116,11 +126,14 @@
     <p><b>Progression:</b> Heavier weight, pause at bottom.</p>
     <img src="images/triceps1.jpg" alt="Triceps extension example 1">
     <img src="images/triceps2.jpg" alt="Triceps extension example 2">
+   </div>
   </details>
 
   <!-- Exercise 7 -->
-  <details>
+
+  <details class="exercise-box">
     <summary><b>V-Crunches</b> — Core finisher</summary>
+    <div class="exercise-content">
     <p><b>How to:</b> Lie flat, arms + legs extended. Contract abs, lift into “V,” reach hands to toes, lower slow.</p>
     <p><b>Cues:</b> Lead with chest, compress abs, avoid neck strain.</p>
     <p><b>Mistakes:</b> Pulling neck, swinging legs.</p>
@@ -128,6 +141,7 @@
     <p><b>Progression:</b> Add plate, slower lowering.</p>
     <img src="images/vcrunch1.jpg" alt="V-Crunch example 1">
     <img src="images/vcrunch2.jpg" alt="V-Crunch example 2">
+    </div>
   </details>
 
   <h4>Program Notes</h4>
