--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>The Simple Guy</title>
+   <meta name="google-site-verification" content="0NHZXSmJXrJ_qAptEL68zXfPZNz2XLeAXk8xwwKQzpY" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
