--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     </article>
     <article class="card">
       <h3>Social</h3>
-      <p>Twitter: <a href="https://twitter.com" target="_blank" rel="noopener">@vikram_aditya</a></p>
+      <p>Instagram: <a href="https://instagram/the.simple.guyyy">The.simple.guyyy</a></p>
     </article>
   </main>
 </body>
