--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
     <p><strong>The antidote is strength.</strong> Parrish reminds us that cleverness is fragile, but strength endures. Strength comes from four practices:</p>
     <ul>
       <li><strong>Accountability:</strong> Ask “What part of this is my responsibility?” The more you own, the faster you grow.</li>
-      <li><strong>Self-knowledge:</strong> Track when you make your worst decisions — tired, rushed, showing off — and redesign your habits.</li>
+      <li><strong>Self-knowledge:</strong> Track when you make your worst decisions, tired, rushed, showing off and redesign your habits.</li>
       <li><strong>Self-control:</strong> Build the pause. A deep breath before you reply. A day before you buy. Slowness is power.</li>
       <li><strong>Self-confidence:</strong> True confidence is the ability to say, “I was wrong.” Weak minds cling; strong ones update.</li>
     </ul>
