--- a/books.html
+++ b/books.html
@@ -74,6 +74,31 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
     </div>
 
     <div class="book-card">
+  <img src="https://m.media-amazon.com/images/I/71Qp8jG0l5L.jpg" alt="Clear Thinking cover">
+  <div class="book-info">
+    <h3>Clear Thinking: Turning Ordinary Moments Into Extraordinary Results</h3>
+    <h4>Shane Parrish</h4>
+    <p><i>Clarity is not about brilliance, it is about avoiding avoidable mistakes.</i></p>
+    <p>Clear Thinking is a reminder that most failures in life come from rushing decisions, reacting emotionally, or getting lost in noise. Parrish shows that slowing down and choosing clarity gives you an edge in work, money, and relationships.</p>
+    <p>The book teaches that success is not about being smarter than others, but about making fewer unforced errors. Shape your environment so the right choices are the easiest, avoid situations where bad outcomes are inevitable, and recognize that small decisions compound into the life you build.</p>
+    <p><i>For me, the key learning is simple: protect your ability to think clearly, and you will protect your ability to live well.</i></p>
+  </div>
+</div>
+
+<div class="book-card">
+  <img src="https://m.media-amazon.com/images/I/61NTjo-9G8L.jpg" alt="The Great CEO Within cover">
+  <div class="book-info">
+    <h3>The Great CEO Within: The Tactical Guide to Company Building</h3>
+    <h4>Alex MacCaw, Matt Mochary, and Misha Talavera</h4>
+    <p><i>Leadership is not charisma, it is clarity and process.</i></p>
+    <p>The Great CEO Within is a manual for building companies and leaders. It cuts through myths about founders and focuses on what really matters: systems, habits, and culture. The real job of a CEO is creating clarity, building trust, and ensuring that the team works on what matters most.</p>
+    <p>What I found most valuable is how tactical it gets: writing agendas, giving feedback, building routines of reflection, and learning to coach instead of command. These are small practices that create powerful organizations.</p>
+    <p><i>The key lesson is that leadership is not about having all the answers, but about creating an environment where the best answers can emerge. Even outside business, these ideas work for anyone who wants to live with systems, clarity, and growth.</i></p>
+  </div>
+</div>
+
+    
+    <div class="book-card">
       <img src="https://m.media-amazon.com/images/I/71D+fc7mGLL.jpg" alt="Zorba the buddha cover">
       <div class="book-info">
         <h3>Zorba the Buddha</h3>
