--- a/books.html
+++ b/books.html
@@ -74,7 +74,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
     </div>
 
     <div class="book-card">
-  <img src="https://m.media-amazon.com/images/I/71Qp8jG0l5L.jpg" alt="Clear Thinking cover">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffs.blog%2Fclear%2F&psig=AOvVaw2qnxPGhLIWdfcK70Ihd6s9&ust=1758382182969000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLCK9JyS5Y8DFQAAAAAdAAAAABAE" alt="Clear Thinking cover">
   <div class="book-info">
     <h3>Clear Thinking: Turning Ordinary Moments Into Extraordinary Results</h3>
     <h4>Shane Parrish</h4>
@@ -86,7 +86,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
 </div>
 
 <div class="book-card">
-  <img src="https://m.media-amazon.com/images/I/61NTjo-9G8L.jpg" alt="The Great CEO Within cover">
+  <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHrAvToVY795lanScyJOkX5rq5OTMHhWCeTuqtv4I0KHsywnAp" alt="The Great CEO Within cover">
   <div class="book-info">
     <h3>The Great CEO Within: The Tactical Guide to Company Building</h3>
     <h4>Alex MacCaw, Matt Mochary, and Misha Talavera</h4>
