--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,19 @@
   <main>
        
     <h2>Blog</h2>
+<!-- Sixth Blog -->
+<details class="blog-box">
+  <summary>Less is More</summary>
+  <div class="blog-content">
+    <h4>The Paradox of Abundance</h4>
+
+    <p>For centuries, human progress has been measured by consumption. More calories, more cosmetics, more content. What was once scarcity has become excess. We now drown in food, clothes, and endless streams of media. Ten-minute delivery brings anything to your door. Reels shrink into seconds. Convenience has collapsed patience, and abundance has destroyed attention. We are teaching our minds to live in fragments.</p>
+
+    <p>Yet the paradox is clear: the more we consume, the emptier we feel. Every possession adds fragility, every distraction steals focus. We think happiness comes from gathering more, but meaning comes only from creating, giving, and building. Consumption is a sugar high; creation is nourishment. The fewer desires you carry, the freer you are.</p>
+
+    <p>The future will not belong to those who consume the most, but to those who need the least. Resilience comes from subtraction, not addition. Less isn’t deprivation - it’s clarity. The less you cling to, the more space you have to think, to create, to live. In a world addicted to more, the rarest luxury is enough.</p>
+  </div>
+</details>
 
 
     <!-- Fifth Blog -->
