--- a/books.html
+++ b/books.html
@@ -82,7 +82,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
     <p><i>Most of us live within limits we never question — but Jonathan Livingston Seagull dares to ask, what if life could be more?</i></p> 
 <p>Richard Bach’s timeless novella follows a seagull who refuses to accept the ordinary, choosing instead to master flight as an expression of freedom and purpose. 
 It’s not really about a bird; it’s about all of us, our fears, our courage, and our hunger to go beyond what we’re told is possible. 
-Reading it felt like a mirror — asking me where in my own life I’ve settled for less than I could be.</p>
+Reading it felt like a mirror, asking me where in my own life I’ve settled for less than I could be.</p>
 <p><i>A short yet powerful story, it inspires you to break boundaries and live as if the sky was never the limit.</i></p>
  </div>
 </div>
