--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,47 @@
   <main>
        
     <h2>Blog</h2>
+
+<!-- Seventh Blog -->
+<details class="blog-box">
+  <summary>The Art of Start</summary>
+  <div class="blog-content">
+    <h4>How to Truly Begin</h4>
+
+    <p><em>“Beginning is half done.” - Aristotle</em></p>
+    <p><em>Italian: "L'inizio è metà dell'opera."</em></p>
+
+    <p>We are social animals. We follow the herd. We inherit careers, rituals, beliefs and a thousand small habits from those who came before. This is both our strength and our weakness. Strength, because it gives us belonging. Weakness, because it makes starting something new unbearably hard. "This is how it is done here," "This is how my family does it," "This is the safe path." Starting something new feels like stepping off a cliff because the herd tells you cliffs are dangerous. So most people do not start. They repeat.</p>
+
+    <p>So the question arises: how do we truly start?</p>
+
+    <p>The answer lies in first principles thinking, stripping away assumptions, biases, and inherited beliefs until you see reality as it is. We are biased by friends, by religion, by news, by trends. Strip everything down to first principles. Take any claim, project or rule and ask: what is undeniably true? Peel layers by asking why - five times if you must - until you hit the bedrock. Identify constraints that cannot be broken. Then rebuild up from those facts. Steve Jobs did this with product design: he did not ask how products had always been made. He asked what the user actually needs, removed everything that did not matter, and rebuilt for simplicity. That is starting from first principles.</p>
+
+    <p>Most problems are simpler than they appear. Complexity often hides laziness or vanity. If something seems impossibly complex, assume a simpler path exists and look for it. Simplicity is the route that survives.</p>
+
+    <p>If you want to start and actually finish, you need three real things:</p>
+
+    <ol>
+      <li><strong>Very well defined goals</strong>: Not "I want to write a book." That is a wish. Define so precisely that if someone woke you at 3 a.m., you could recite the plan. Example template: outcome (60,000 words finished), deadline (6 months), first milestone (outline and chapter plan in 2 weeks), daily habit (write 500 words before email), acceptance test (a draft where each chapter has a purpose and a call to action). Add metrics and failure conditions. If you cannot describe the first 90 days in exact steps, you do not have a startable goal.</li>
+
+      <li><strong>Hard work and smart work - both</strong>: Hard work is obvious; smart work is missing in most plans. Hard work = focused hours doing the core task. Smart work = deliberate practice, feedback loops, and minimum viable experiments. Break big tasks into repeatable drills. Use Pomodoro blocks. Ship the smallest thing that tests your assumptions - the minimum viable product. Get feedback, iterate, then scale effort. Find people who will tell you what is wrong, not what is flattering. Systems beat inspiration. Automation and routines compound time and attention.</li>
+
+      <li><strong>Patience - real patience, not wishful thinking</strong>: People plan and grind for two weeks, then declare the idea dead. Give any meaningful pursuit margin to breathe. Your rule of thumb: judge after at least 1,000 hours of work. One hour a day for 1,000 days, or three hours a day for a year - you choose the cadence. Skill, network, and judgment compound slowly. Patience is how you survive the valley of bad first drafts, early failures, and noisy feedback.</li>
+    </ol>
+
+    <p>A practical tool to anchor all of this is a physical to-do list. Get a small diary and a pen. Every morning, write down your top three tasks as bullet points. Do not overfill it. When one is finished, strike it out with a line. This small act compounds into focus and momentum. The diary becomes proof of progress, a record that cannot be scrolled away.</p>
+
+    <p>If your task is well defined, starting becomes trivial. Complexity falls away, the first small win lights the next move, and momentum carries you forward. Start small, be ugly, get feedback, repeat.</p>
+
+    <p>If you are feeling hesitant, embarrassed, or frustrated at the beginning, remember this:</p>
+
+    <p><em>"Once again, I am deeply disgusted that I must first be bad at something in order to get good at it."</em></p>
+  </div>
+</details>
+
+
+
+    
 <!-- Sixth Blog -->
 <details class="blog-box">
   <summary>Less is More</summary>
