--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,22 @@
        
     <h2>Blog</h2>
 
+<!-- Eight Blog -->
+<details class="blog-content">
+  <summary>Learning of This Week</summary>
+  <div class="blog-content">
+    <h4>Naval Ravikant's formulas for Life</h4>
+    <p>Happiness = Health + Wealth + Good Relationships</p>
+    <p>Health = Exercise + Diet + Sleep </p>
+    <p>Exercise = High Intensity Resistance Training + Sports + Rest</p>
+    <p>Diets = Natural Foods+ Intermittent Fasting + Plants </p>
+    <p>Sleep = No Alarms +7-8 hours+ Circadian rhythms</p>
+    <p>Wealth = Income + Wealth* ( Return on Investment)</p>
+    <p>Income = Accountability + Leverage + Specific Knowledge</p>
+    
+  </div>
+</details>
+
 <!-- Seventh Blog -->
 <details class="blog-box">
   <summary>The Art of Start</summary>
