--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
     <h2>Blog</h2>
 
 <!-- Eight Blog -->
-<details class="blog-content">
+<details class="blog-box">
   <summary>Learning of This Week</summary>
   <div class="blog-content">
     <h4>Naval Ravikant's formulas for Life</h4>
@@ -44,6 +44,9 @@
     <p>Sleep = No Alarms +7-8 hours+ Circadian rhythms</p>
     <p>Wealth = Income + Wealth* ( Return on Investment)</p>
     <p>Income = Accountability + Leverage + Specific Knowledge</p>
+    <p>Accountability = Personal Branding + Personal Platform + Taking Risk?</p>
+    <p>Leverage = Capital + People + Intellectual Property </p>
+    <p></p>
     
   </div>
 </details>
