--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 
 <!-- Eight Blog -->
 <details class="blog-box">
-  <summary>Learning of This Week</summary>
+  <summary>Best thing I read in this week</summary>
   <div class="blog-content">
     <h4>Naval Ravikant's formulas for Life</h4>
     <p>Happiness = Health + Wealth + Good Relationships</p>
@@ -46,8 +46,18 @@
     <p>Income = Accountability + Leverage + Specific Knowledge</p>
     <p>Accountability = Personal Branding + Personal Platform + Taking Risk?</p>
     <p>Leverage = Capital + People + Intellectual Property </p>
-    <p></p>
-    
+    <p> specific knowledge = knowing how to do something society cannot yet easily train other people to do</p>
+    <p> Return on Investment = "Buy and hold" + Valuation + Margin of Safety</p>
+
+    <h4>How to get Lucky By Sam altman</h4>
+    <p>"Give yourself a lot of shots to get lucky" is even better advices than it appears on the surface. luck isn't an independent variable but increases super-linearly with more surface area- ypu meet more people, make more connections between new ideas, learn pattern etc.</p>
+
+    <h4>Charlie Munger's Advice to young People</h4>
+    <p>I constantly see people rise in life who are not the smartest, sometimes not even the most diligent, but they are learning machines.</p>
+     <p>They go to bed every night a little wiser than they were when they got up and boy does that help, particulary when you have along run ahead of you. </p>
+
+    <h4>Tom Brady Quotes</h4>
+    <p>To be successful at anything, the truth is, you don't have to be special. you just have to be what most people aren't: consistent, determined, and willing to work for it. No shortcuts.</p>
   </div>
 </details>
 
