--- a/workout.html
+++ b/workout.html
@@ -38,15 +38,19 @@
 
   <!-- Exercise 1 -->
   <details class="exercise-box">
-    <summary><b>Incline Dumbbell Press</b> — Upper chest, front delts, triceps</summary>
+    <summary><b>Incline Dumbbell Press</b></summary>
      <div class="exercise-content">
-    <p><b>How to:</b> Set bench 25–35°. Sit, dumbbells on knees, lie back, brace, press up slightly inward, lower under control to chest level.</p>
-    <p><b>Cues:</b> Chest down, elbows ~45°, drive through palms.</p>
-    <p><b>Common mistakes:</b> Bench too steep, flared elbows, bouncing off chest.</p>
-    <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
-    <p><b>Progression:</b> Add weight/reps, pause at bottom, slower lowering.</p>
-    <img src="https://cdn.shopify.com/s/files/1/1497/9682/files/2_2ede191f-4aa5-4b2e-81e7-e16850e948a4.jpg?v=1648826784" alt="Incline press example 1">
-  </div>
+    <p><b>How to:</b> The incline dumbbell press is a powerful exercise for building the upper chest and shoulders. Set your bench at a 30–45° angle, sit down with dumbbells on your quads, and kick them into position as you lie back. Keep your chest up, shoulder blades pulled down, feet planted firmly, and core braced as if preparing for a punch. Press the dumbbells upward to full lockout, then lower them under control, letting your shoulder blades move naturally while staying stable. Done with proper form, this lift adds both size and strength to your upper body</p>
+   
+    <iframe width="100%" height="315" 
+src="https://www.youtube.com/embed/ou6s32mJgjU" 
+title="Incline Dumbbell Press" 
+frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+allowfullscreen></iframe>
+
+     
+     </div>
   </details>
 
   <!-- Exercise 2 -->
