--- a/workout.html
+++ b/workout.html
@@ -28,10 +28,6 @@
 
   <main>
     <h2>Workout</h2>
-
-    <!-- Motivation -->
- 
-
    <!-- Push Day -->
 <article id="push" class="card">
   <h3>Push Day (Chest, Shoulders, Triceps)</h3>
@@ -40,16 +36,15 @@
   <details class="exercise-box">
     <summary><b>Incline Dumbbell Press</b></summary>
      <div class="exercise-content">
-    <p><b>How to:</b> The incline dumbbell press is a powerful exercise for building the upper chest and shoulders. Set your bench at a 30–45° angle, sit down with dumbbells on your quads, and kick them into position as you lie back. Keep your chest up, shoulder blades pulled down, feet planted firmly, and core braced as if preparing for a punch. Press the dumbbells upward to full lockout, then lower them under control, letting your shoulder blades move naturally while staying stable. Done with proper form, this lift adds both size and strength to your upper body</p>
-   
-    <iframe width="100%" height="315" 
+    <p> The incline dumbbell press is a powerful exercise for building the upper chest and shoulders. Set your bench at a 30–45° angle, sit down with dumbbells on your quads, and kick them into position as you lie back. Keep your chest up, shoulder blades pulled down, feet planted firmly, and core braced as if preparing for a punch. Press the dumbbells upward to full lockout, then lower them under control, letting your shoulder blades move naturally while staying stable. Done with proper form, this lift adds both size and strength to your upper body</p>
+      <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
+    <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
+       <iframe width="100%" height="315" 
 src="https://www.youtube.com/embed/ou6s32mJgjU" 
 title="Incline Dumbbell Press" 
 frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 allowfullscreen></iframe>
-
-     
      </div>
   </details>
 
