--- a/workout.html
+++ b/workout.html
@@ -36,9 +36,8 @@
   <details class="exercise-box">
     <summary><b>Incline Dumbbell Press</b></summary>
      <div class="exercise-content">
-    <p> The incline dumbbell press is a powerful exercise for building the upper chest and shoulders. Set your bench at a 30–45° angle, sit down with dumbbells on your quads, and kick them into position as you lie back. Keep your chest up, shoulder blades pulled down, feet planted firmly, and core braced as if preparing for a punch. Press the dumbbells upward to full lockout, then lower them under control, letting your shoulder blades move naturally while staying stable. Done with proper form, this lift adds both size and strength to your upper body</p>
-      <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
-    <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
+     <p> The incline dumbbell press is a powerful exercise for building the upper chest and shoulders. Set your bench at a 30–45° angle, sit down with dumbbells on your quads, and kick them into position as you lie back. Keep your chest up, shoulder blades pulled down, feet planted firmly, and core braced as if preparing for a punch. Press the dumbbells upward to full lockout, then lower them under control, letting your shoulder blades move naturally while staying stable. Done with proper form, this lift adds both size and strength to your upper body</p>
+       <img src="https://cdn.shopify.com/s/files/1/1497/9682/files/2_2ede191f-4aa5-4b2e-81e7-e16850e948a4.jpg?v=1648826784" alt="Incline press example 1">
        <iframe width="100%" height="315" 
 src="https://www.youtube.com/embed/ou6s32mJgjU" 
 title="Incline Dumbbell Press" 
@@ -48,101 +47,103 @@ allowfullscreen></iframe>
      </div>
   </details>
 
-  <!-- Exercise 2 -->
-  <details class="exercise-box">
-    <summary><b>Flat Dumbbell Fly</b> — Chest isolation</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Lie flat, arms overhead, slight elbow bend. Open wide until stretch in chest, then squeeze back together.</p>
-    <p><b>Cues:</b> Lead with chest, not elbows.</p>
-    <p><b>Common mistakes:</b> Straight elbows, too heavy weights, shoulder strain.</p>
-    <p><b>Sets/Reps:</b> 3 × 8–15</p>
-    <p><b>Progression:</b> Slower lowering, longer stretch, superset with presses.</p>
-    <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
-    <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
-   </div>
-  </details>
+ <!-- Exercise 2 -->
+<details class="exercise-box">
+  <summary><b>Flat Dumbbell Fly</b></summary>
+  <div class="exercise-content">
+    <p>The flat dumbbell fly is a chest isolation exercise that emphasizes stretch and contraction. Lie flat on a bench with a dumbbell in each hand, arms extended above your chest with a slight bend in the elbows. Slowly open your arms in a wide arc until you feel a deep stretch across your chest, then squeeze the weights back together under control. Keep the movement smooth, avoid locking your elbows, and focus on engaging the chest rather than the shoulders for maximum benefit.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/rk8YayRoTRQ" 
+      title="Flat Dumbbell Fly" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
 
   <!-- Exercise 3 -->
-  
-  <details class="exercise-box">
-    <summary><b>Weighted Dips</b> — Chest & triceps</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Use dip bars. Lean forward for chest, upright for triceps. Lower until arms ~parallel, push back up.</p>
-    <p><b>Cues:</b> Chest forward, scapula stable.</p>
-    <p><b>Mistakes:</b> Too deep, kipping, wrist flare.</p>
-    <p><b>Sets/Reps:</b> 3 × 6–12</p>
-    <p><b>Progression:</b> Add weight, slow lowering.</p>
-    <img src="images/dips1.jpg" alt="Weighted dips example 1">
-    <img src="images/dips2.jpg" alt="Weighted dips example 2">
-    </div>
-  </details>
+<details class="exercise-box">
+  <summary><b>Weighted Dips</b></summary>
+  <div class="exercise-content">
+    <p>Weighted dips are a powerful compound movement for building the chest, triceps, and shoulders. Using parallel bars, lean slightly forward to emphasize the chest or stay more upright to target the triceps. Lower your body until your arms are about parallel to the ground, then press back up with control. Keep your core tight, chest lifted, and shoulders stable throughout to avoid unnecessary strain while maximizing strength and muscle growth.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/ci5tcFgIntI" 
+      title="Weighted Dips" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
 
-  <!-- Exercise 4 -->
-  
-  <details class="exercise-box">
-    <summary><b>Seated Dumbbell Shoulder Press</b> — Shoulders, triceps</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Sit upright, press dumbbells overhead without arching lower back.</p>
-    <p><b>Cues:</b> Ribcage down, head forward as weights pass.</p>
-    <p><b>Mistakes:</b> Excessive arch, too wide grip, momentum use.</p>
-    <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
-    <p><b>Progression:</b> Add load, single-arm sets, pause reps.</p>
-    <img src="images/shoulder-press1.jpg" alt="Shoulder press example 1">
-    <img src="images/shoulder-press2.jpg" alt="Shoulder press example 2">
-    </div>
-  </details>
+<!-- Exercise 4 -->
+<details class="exercise-box">
+  <summary><b>Seated Dumbbell Shoulder Press</b></summary>
+  <div class="exercise-content">
+    <p>The seated dumbbell shoulder press is one of the best exercises for building strong, defined shoulders while also engaging the triceps. Sit upright with your back supported, dumbbells at shoulder level, and core braced. Press the weights overhead in a controlled motion, keeping your ribcage down and avoiding excessive arch in your lower back. Lower the dumbbells slowly back to starting position and repeat for a powerful upper body builder.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/OLePvpxQEGk" 
+      title="Seated Dumbbell Shoulder Press" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
 
-  <!-- Exercise 5 -->
+<!-- Exercise 5 -->
+<details class="exercise-box">
+  <summary><b>Dumbbell Lateral Raises</b></summary>
+  <div class="exercise-content">
+    <p>The dumbbell lateral raise is a staple for isolating and building the side delts, giving your shoulders a wider and more defined look. Stand tall with dumbbells at your sides, keep a slight bend in the elbows, and raise your arms to shoulder height in a controlled motion. Focus on leading with your elbows rather than your hands, avoid swinging through the torso, and control both the lift and the lowering phase. This simple yet effective movement creates well-rounded shoulder development when performed consistently with good form.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/JIhbYYA1Q90" 
+      title="Dumbbell Lateral Raises" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
+ 
+<!-- Exercise 6 -->
+<details class="exercise-box">
+  <summary><b>Overhead Triceps Extension</b></summary>
+  <div class="exercise-content">
+    <p>The overhead triceps extension targets the long head of the triceps, helping build stronger and fuller arms. Hold a dumbbell securely overhead, lower it slowly behind your head for a full stretch, then extend your arms back to lockout with control. Keep your elbows close to your head, avoid flaring, and focus on squeezing the triceps through each rep. Done correctly, this isolation move delivers both strength and definition to the upper arms.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/rgwnJbONdZo" 
+      title="Overhead Triceps Extension" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
 
-  <details class="exercise-box">
-    <summary><b>Dumbbell Lateral Raises</b> — Lateral delts</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Raise dumbbells to shoulder height, elbows slightly bent, controlled motion.</p>
-    <p><b>Cues:</b> Lead with elbows, not hands.</p>
-    <p><b>Mistakes:</b> Swinging torso, lifting too high.</p>
-    <p><b>Sets/Reps:</b> 3 × 10–15</p>
-    <p><b>Progression:</b> Tempo control, drop-sets.</p>
-    <img src="images/lateral-raise1.jpg" alt="Lateral raises example 1">
-    <img src="images/lateral-raise2.jpg" alt="Lateral raises example 2">
-    </div>
-  </details>
-
-  <!-- Exercise 6 -->
-
-  <details class="exercise-box">
-    <summary><b>Overhead Triceps Extension</b> — Triceps long head</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Hold dumbbell overhead, lower behind head, extend fully.</p>
-    <p><b>Cues:</b> Elbow close, full stretch & contraction.</p>
-    <p><b>Mistakes:</b> Elbow flaring, using momentum.</p>
-    <p><b>Sets/Reps:</b> 3 × 8–12</p>
-    <p><b>Progression:</b> Heavier weight, pause at bottom.</p>
-    <img src="images/triceps1.jpg" alt="Triceps extension example 1">
-    <img src="images/triceps2.jpg" alt="Triceps extension example 2">
-   </div>
-  </details>
 
   <!-- Exercise 7 -->
+<details class="exercise-box">
+  <summary><b>V-Crunches</b></summary>
+  <div class="exercise-content">
+    <p>V-crunches are a powerful core finisher that target the entire abdominal wall. Start lying flat with arms and legs extended, then contract your abs to lift both into a “V” shape, reaching your hands toward your toes. Lower slowly under control, keeping tension on the core throughout. Avoid pulling on the neck or swinging the legs—focus on leading with the chest and compressing the abs for maximum benefit.</p>
+    <iframe width="100%" height="315" 
+      src="https://www.youtube.com/embed/Vnep1dTa_IQ" 
+      title="V-Crunches" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</details>
 
-  <details class="exercise-box">
-    <summary><b>V-Crunches</b> — Core finisher</summary>
-    <div class="exercise-content">
-    <p><b>How to:</b> Lie flat, arms + legs extended. Contract abs, lift into “V,” reach hands to toes, lower slow.</p>
-    <p><b>Cues:</b> Lead with chest, compress abs, avoid neck strain.</p>
-    <p><b>Mistakes:</b> Pulling neck, swinging legs.</p>
-    <p><b>Sets/Reps:</b> 3 × 12–20 (or 30–45s)</p>
-    <p><b>Progression:</b> Add plate, slower lowering.</p>
-    <img src="images/vcrunch1.jpg" alt="V-Crunch example 1">
-    <img src="images/vcrunch2.jpg" alt="V-Crunch example 2">
-    </div>
-  </details>
 
   <h4>Program Notes</h4>
   <ul>
     <li>Order: compound → accessory → isolation → core.</li>
     <li>Progressive overload: track reps/weight weekly.</li>
     <li>Recovery: 48–72 hrs before repeating push muscles.</li>
-    <li>Joint health: add rotator cuff work (bands, face pulls).</li>
     <li>Increase load if you hit top reps with perfect form twice in a row.</li>
   </ul>
 
