--- a/workout.html
+++ b/workout.html
@@ -52,7 +52,9 @@ allowfullscreen></iframe>
   <summary><b>Flat Dumbbell Fly</b></summary>
   <div class="exercise-content">
     <p>The flat dumbbell fly is a chest isolation exercise that emphasizes stretch and contraction. Lie flat on a bench with a dumbbell in each hand, arms extended above your chest with a slight bend in the elbows. Slowly open your arms in a wide arc until you feel a deep stretch across your chest, then squeeze the weights back together under control. Keep the movement smooth, avoid locking your elbows, and focus on engaging the chest rather than the shoulders for maximum benefit.</p>
-    <iframe width="100%" height="315" 
+     <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
+    <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
+    iframe width="100%" height="315" 
       src="https://www.youtube.com/embed/rk8YayRoTRQ" 
       title="Flat Dumbbell Fly" 
       frameborder="0" 
